<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_Elections">Upcoming Elections</string>
    <string name="find_my_rep">Find My Representatives</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="election_info">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_info">Ballot Information</string>
    <string name="corr_address">Correspondence Address</string>
    <string name="rep_search">Representative Search</string>
    <string name="use_my_location">Use My Location</string>
    <string name="state">State</string>
    <string name="my_reps">My Representatives</string>
    <string name="follow_elec">Follow Election</string>
    <string name="unfollow_elec">Unfollow Election</string>
    <string name="address_line_first">Address Line 1</string>
    <string name="address_line_second">Address Line 2</string>
    <string name="save">Save Election</string>
    <string name="unsave">Unsave Election</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="address_error">Please Enter address</string>
    <string name="location_error">Something went wrong with location services</string>

</resources>
