<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="voterinfoviewmodel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/election_name"
                style="@style/headerstyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Election Name"
                android:padding="@dimen/default_padding"
                android:singleLine="true"
                app:title="@{voterinfoviewmodel.electionname}"
                app:titleTextColor="#FFFFFF" />

            <TextView
                android:id="@+id/election_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding"
                android:hint="Fri Jun 06 00:00:00 EDT 2025"
                android:text="@{voterinfoviewmodel.voterInfoResponse.election.electionDay.toString()}" />

            <TextView
                android:id="@+id/state_header"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="state header"
                android:visibility="gone"
                android:text="@string/election_info"
                android:textSize="@dimen/titletextsize" />

            <TextView
                android:id="@+id/state_locations"
                style="@style/text"
                android:onClick="@{()->voterinfoviewmodel.onVotingLocationsClicked()}"
                android:text="@string/voting_locations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="state location" />

            <TextView
                android:id="@+id/state_ballot"
                style="@style/text"
                android:layout_width="wrap_content"
                android:text="@string/ballot_info"
                android:onClick="@{()->voterinfoviewmodel.onBallotInfoClicked()}"
                android:layout_height="wrap_content"
                android:hint="ballots" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/address_group"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="address,state_correspondence_header" />

            <TextView
                android:id="@+id/state_correspondence_header"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:hint="state correspondance"
                android:textSize="@dimen/titletextsize" />

        <TextView
            android:id="@+id/address"
            style="@style/text"
            android:text="@{voterinfoviewmodel.corrAddress.toString()}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:hint="address" />
        </LinearLayout>
        <Button
            android:id="@+id/saveElectionButton"
            style="@style/butttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@{voterinfoviewmodel.buttontext}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>